--- a/spring-security-client/src/main/resources/application.properties.yaml
+++ b/spring-security-client/src/main/resources/application.properties.yaml
@@ -1,1 +1,12 @@
+server:
+  port: 6565
 
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/dcbapp?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
+    username: root
+    password: ''
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
