--- a/spring-security-client/src/main/resources/application.properties.yaml
+++ b/spring-security-client/src/main/resources/application.properties.yaml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/dcbapp?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/user_registration?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: root
     password: ''
     driver-class-name: com.mysql.cj.jdbc.Driver
